updated the Space page
also updated every page with their respected "images"

--- a/pages/nature.html
+++ b/pages/nature.html
@@ -65,7 +65,7 @@
         </p>
 
         <!-- TODO: add absolute path to the unsplash "nature" collection page from README.md -->
-        <a class="more-images" href="../assets/gallery-images/nature/nature-image.jpg">More Nature Images</a>
+        <a class="more-images" href="https://unsplash.com/s/photos/nature">More Nature Images</a>
         <div class="detail-navigation">
           <!-- TODO: add relative path to plants.html file -->
           <a href="../pages/plants.html" class="nav-button">&#8656;&nbsp;&nbsp;Prev: Plants</a>
